[tool.poetry]
name = "colonies_py"
version = "0.1.0"
description = ""
authors = ["Will Sena <wllsena@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
